--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0"
+    },
+    "dependencies": {
+        "dotenv": "^10.0.0",
+        "react-router": "^5.2.0",
+        "react-router-dom": "^5.2.0"
     }
 }
